test/resources/valid/ValidStringConstant.flo
string postsUrl = '/posts';

action GET_ALL_POSTS = network(url = postsUrl, method = 'GET');

flow POSTS = {
    string[] posts = [];
    GET_ALL_POSTS >> posts;
}
