test/resources/invalid/typecheck/InvalidRedefinedActionInFlow.flo
action GET_ALL_USERS = network(url = '/users', method = 'GET');
action UPDATE_USER = network(url = '/users/:uuid', method = 'PUT');
action ENOUGH_USERS_ONLINE = toggle();

flow USERS = {
    string[] users = [];
    boolean enoughUsersOnline = false;
    boolean ENOUGH_USERS_ONLINE;
    GET_ALL_USERS >> users;
    UPDATE_USER >> users;
    ENOUGH_USERS_ONLINE >> enoughUsersOnline;
}
